# Battleship

./: CMakeLists.txt  battleship.cpp  battleship.h  main.cpp  readme.md  ships.txt
includes/battleship/: battleship.cpp
