cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(Battleship)

#- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
#   Grab all cpp files from includes folder
#- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
set(INCLUDES_FOLDER includes)
FILE(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}   "${INCLUDES_FOLDER}/*.cpp" )
#- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

file(COPY "ships.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

ADD_EXECUTABLE(main
    main.cpp
    ${SOURCE_FILES}
)
